Further developed ergodicity in mean and resulting power spectral density as a means to measure spectral power

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -123,7 +123,21 @@
   isbn         = {B0006AUOGO},
   url          = {http://statweb.stanford.edu/~cgates/PERSI/Courses/Phil166-266/Kolmogorov-Foundations.pdf},
   }
-  
+
+@book{manolakis2005,
+  isbn10       = {1580536107},
+  isbn         = {9781580536103},
+  title        = {Statistical and Adaptive Signal Processing: Spectral Estimation, Signal Modeling, Adaptive Filtering, and Array Processing},
+  series       = {Artech House signal processing library},
+  author       = {Dimitris G. Manolakis and Vinay K. Ingle and Stephen M. Kogon},
+  edition      = {illustrated, reprint},
+  publisher    = {Artech House},
+  year         = {2005},
+  pages        = {796},
+  urlg         = {http://books.google.com/books?vid=ISBN1580536107},
+  url          = {http://www.amazon.com/dp/1580536107},
+  }
+
 @book{matheron1975,
   author       = {Georges Matheron},
   title        = {Random Sets and Integral Geometry},
@@ -173,6 +187,22 @@
   urlg         = {http://books.google.com/books?vid=ISBN9812708014},
   }
 
+@book{papoulis1984,
+  isbn         = {0070484686},
+  isbn         = {9780070484689},
+  author       = {Anthanasios Papoulis},
+  title        = {Probability, Random Variables, and Stochastic Processes},
+  series       = {McGraw-Hill Series in Electrical Engineering},
+  edition      = {2},
+  publisher    = {McGraw-Hill Book Company},
+  address      = {New York},
+  year         = {1984},
+  url          = {http://books.google.com/books?vid=ISBN0070484686},
+  urla         = {http://www.amazon.com/dp/0070484686},
+  pages        = {576},
+  language     = {English},
+  }
+
 @book{papoulis,
   isbn         = {0070484775},
   oclc         = {22704249},
@@ -187,19 +217,19 @@
   language     = {English},
   }
 
-@book{papoulis1984,
-  isbn         = {0070484686},
-  isbn         = {9780070484689},
+@book{papoulis2002,
+  isbn10       = {0071226613},
+  isbn         = {9780071226615},
   author       = {Anthanasios Papoulis},
   title        = {Probability, Random Variables, and Stochastic Processes},
-  series       = {McGraw-Hill Series in Electrical Engineering},
-  edition      = {2},
-  publisher    = {McGraw-Hill Book Company},
+  series       = {McGraw-Hill series in electrical and computer engineering},
+  edition      = {4},
+  publisher    = {Tata McGraw-Hill},
   address      = {New York},
-  year         = {1984},
-  url          = {http://books.google.com/books?vid=ISBN0070484686},
-  urla         = {http://www.amazon.com/dp/0070484686},
-  pages        = {576},
+  year         = {2002},
+  url          = {http://books.google.com/books?vid=ISBN0071226613},
+  urla         = {https://www.amazon.com/dp/0071226613},
+  pages        = {852},
   language     = {English},
   }
 
