--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -718,20 +718,14 @@
  \newcommand{\setindAx}[0]{\setind_{\setA(x)}} % set indicator function
  \newcommand{\fstep}[0]{\upsigma} % step function
  \newcommand{\funit}[0]{\upmu} % unit interval step function
-
  \newcommand{\Setu}  [0]{\bigcup} % set union
  \newcommand{\Seti}  [0]{\bigcap} % set intersection
  \newcommand{\Sets}  [0]{\triangle} % set symmetric difference
  \newcommand{\setops}{\triangle}   % set symmetric difference
-
  \newcommand{\setopc}{{\mathsfup{c}}} % set complement
-
  \newcommand{\setopu}{\bigcup}     % set union
  \newcommand{\setopi}{\bigcap}     % set intersection
-
  \newcommand{\diff}  [0]{\!\setminus\!} % difference operation
-
-%\newcommand{\clsa}[1]{\overline{#1}}      %alternative closure
 \newcommand{\cls}[1]{{#1}^\minus}      %closure
 \newcommand{\clsp}[1]{\cls{\brp{#1}}}  %closure with parenthesis
 \newcommand{\clss}[1]{\cls{\brs{#1}}}  %closure with square brackets
@@ -739,7 +733,6 @@
 \newcommand{\ext}[1]{{#1}^\mbfscre}    %exterior
 \newcommand{\extp}[1]{\ext{\brp{#1}}}  %exterior with parenthesis
 \newcommand{\exts}[1]{\ext{\brs{#1}}}  %exterior with square brackets
-%\newcommand{\cmp}[1]{{{#1}^\msansc}}   %absolute complement  of a set
 \newcommand{\cmp}[1]{{{#1}^\setopc}}   %absolute complement  of a set
 \newcommand{\cmpp}[1]{\cmp{\brp{#1}}}      %closure with parenthesis
 \newcommand{\cmps}[1]{\cmp{\brs{#1}}}      %closure with square brackets
@@ -937,8 +930,8 @@
 %--------------------------------------
 % Matrices
 %--------------------------------------
- \newcommand{\vectxy}[2]{\begin{tabstr}{0.5}\brs{\begin{array}{c}#1\\#2\end{array}}\end{tabstr}}% column vector [x y]^T
- \newcommand{\matIrr}{\begin{tabstr}{0.5}\brs{\begin{array}{cc}1&0\\0&1\end{array}}\end{tabstr}}% identity matrix in R^2
+\newcommand{\vectxy}[2]{\begin{tabstr}{0.5}\brs{\begin{array}{c}#1\\#2\end{array}}\end{tabstr}}% column vector [x y]^T
+\newcommand{\matIrr}{\begin{tabstr}{0.5}\brs{\begin{array}{cc}1&0\\0&1\end{array}}\end{tabstr}}% identity matrix in R^2
 
 %--------------------------------------
 % ordered metric spaces
@@ -1512,12 +1505,10 @@
 % algebras
 %--------------------------------------
 \newcommand{\algA}[0]{\mbfA}         %
-\renewcommand{\Re} [0]{\ensuremath{\mathOpp{R}_{\mathsfup{e}}}}
-\renewcommand{\Im} [0]{\ensuremath{\mathOpp{I}_{\mathsfup{m}}}}
-\newcommand{\Reb}[1]{\ensuremath{\Re\left[#1\right]}}
-\newcommand{\Imb}[1]{\ensuremath{\Im\left[#1\right]}}
-
-
+\renewcommand{\Re} [0]{{\mathOpp{R}_{\mathsfup{e}}}}
+\renewcommand{\Im} [0]{{\mathOpp{I}_{\mathsfup{m}}}}
+\newcommand{\Reb}[1]{{\Re\left[#1\right]}}
+\newcommand{\Imb}[1]{{\Im\left[#1\right]}}
 
 %--------------------------------------
 % Measure theory
@@ -1542,8 +1533,6 @@
 \newcommand{\psE} [0] {\BbbE}        % probability space events
 \newcommand{\psP} [0] {\mathsfup{P}} % probability space probability measure
 \newcommand{\psPcl}[0]{\clF{\psE}{\intcc{0}{1}}} % class of functions E-->[0,1] to which P belongs
-
-
 
 \newcommand{\psL} [0] {\latL}
 \newcommand{\ps}  [0] {\otriple{\psO}{\psE}{\psP}} % probability space
@@ -1619,8 +1608,11 @@
 %--------------------------------------
 % probability distributions
 %--------------------------------------
- \newcommand{\pN}   [2]{\ensuremath{\:\mathrm{N}\left( #1,#2 \right)}} %normal distribution
- \newcommand{\Qb}   [1] {\ensuremath{\mathrm{Q}\left[#1\right]}}
+\newcommand{\pN}   [2]{\ensuremath{\:\mathrm{N}\left( #1,#2 \right)}} %normal distribution
+\newcommand{\Qb}   [1] {\ensuremath{\mathrm{Q}\left[#1\right]}}
+\newcommand{\cdfx}[0] {\mathfnct{c}_{\rvx}}  % cummulative distribution function on X
+\newcommand{\cdfy}[0] {\mathfnct{c}_{\rvy}}
+\newcommand{\cdft}[0] {\mathfnct{c}_{\rvt}}
 
 %--------------------------------------
 % random variables
@@ -1636,23 +1628,37 @@
 \newcommand{\rvr}[0]{\mbfr}
 \newcommand{\rvt}[0]{\mbftheta}
 
-\newcommand{\cdfx}[0] {\mathfnct{c}_{\rvx}}  % cummulative distribution function on X
-\newcommand{\cdfy}[0] {\mathfnct{c}_{\rvy}}
+%--------------------------------------
+% Statistics
+%--------------------------------------
 \newcommand{\My}  [0] {\mathfnct{\mu_{\rvy}}}
-
-\newcommand{\cdft}[0] {\mathfnct{c}_{\rvt}}
 \newcommand{\Mt}  [0] {\mathfnct{\mu_{\rvt}}}
-
-
-\newcommand{\coinhead}{\ensuretext{\fntSymbola\symbol{"263A}}}% "white smiley face"
-\newcommand{\cointail}{\ensuretext{\fntSymbola\symbol{"25CF}}}% "black circle"
 
 %--------------------------------------
 % Random processes
 %--------------------------------------
+\newcommand{\coinhead}{\ensuretext{\fntSymbola\symbol{"263A}}}% "white smiley face"
+\newcommand{\cointail}{\ensuretext{\fntSymbola\symbol{"25CF}}}% "black circle"
+
+%--------------------------------------
+% System identification
+%--------------------------------------
 \newcommand{\Rxx}    [1][xx] {R_{\mathsfup{#1}}}  % Autocorrelation function
 \newcommand{\Sxx}    [1][xx] {S_{\mathsfup{#1}}}  % spectral density
+
 \newcommand{\Swxx}   [1][xx] {\tilde{S}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Swyy}   {\Swxx[yy]}
+\newcommand{\Swxy}   {\Swxx[xy]}
+\newcommand{\Swyx}   {\Swxx[yx]}
+\newcommand{\Swphi}  {\Swxx[\phi\phi]}
+\newcommand{\Swpsi}  {\Swxx[\psi\psi]}
+\newcommand{\Swfg}   {\Swxx[fg]}
+\newcommand{\Swgf}   {\Swxx[gf]}
+\newcommand{\Swff}   {\Swxx[ff]}
+\newcommand{\Swgg}   {\Swxx[gg]}
+\newcommand{\Swn}   [1][n] {{\tilde{S}_{{#1}}}}
+\newcommand{\Sww}    {\Sxx[ww]}
+
 \newcommand{\LSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Laplace spectral density
 \newcommand{\ZSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Z-domain spectral density
 \newcommand{\avgRxx} [1][xx] {\bar{R}_{\mathsfup{#1}}}  % Autocorrelation function
@@ -1688,27 +1694,17 @@
 \newcommand{\Spsi}   {\Swxx[\psi\psi]}
 \newcommand{\Szphi}   {\Sxx[\phi\phi]}
 \newcommand{\Szpsi}   {\Sxx[\psi\psi]}
-\newcommand{\Swphi}   {\Swxx[\phi\phi]}
-\newcommand{\Swpsi}   {\Swxx[\psi\psi]}
 \newcommand{\Szfg}   {\Sxx[fg]}
 \newcommand{\Szff}   {\Sxx[ff]}
-\newcommand{\Swfg}   {\Swxx[fg]}
-\newcommand{\Swgf}   {\Swxx[gf]}
-\newcommand{\Swff}   {\Swxx[ff]}
-\newcommand{\Swyy}   {\Swxx[yy]}
-\newcommand{\Swxy}   {\Swxx[xy]}
-\newcommand{\Swgg}   {\Swxx[gg]}
-\newcommand{\Swn}   [1][n] {{\tilde{S}_{{#1}}}}
 \newcommand{\LSphi}  {\LSxx[\phi\phi]}
 \newcommand{\LSyy}   {\LSxx[yy]}
 \newcommand{\ZSyy}   {\ZSxx[yy]}
 \newcommand{\Spp}    {\Sxx[pp]}
 \newcommand{\Sqq}    {\Sxx[qq]}
-\newcommand{\Sww}    {\Sxx[ww]}
 \newcommand{\Sss}    {\Sxx[ss]}
 \newcommand{\avgSss} {\avgSxx[ss]}
 
-\newcommand{\Sxy} {\Sxx[xy]} % Cross-correlation function
+\newcommand{\Sxy} {\Sxx[xy]}  % Cross-correlation function
 \newcommand{\LSxy}{\LSxx[xy]} % Cross-correlation function
 \newcommand{\LSyx}{\LSxx[yx]} % Cross-correlation function
 \newcommand{\ZSxy}{\ZSxx[xy]} % Cross-correlation function
