migrated probability space examples from measure.tex to probspace.tex

--- a/common/measure.tex
+++ b/common/measure.tex
@@ -378,10 +378,7 @@ Let $\setind_{\setE}(x)$ be the \fncte{set indicator function} \xref{def:setind}
 \end{array}}
 \end{example}
 
-
-
-
-%\prefp{ex:msr_counting} (next) is useful for converting an integral into a summation.
+\pref{ex:msr_counting} (next) is useful for converting an integral $\int$ into a summation $\sum$.
 %---------------------------------------
 \begin{example}
 \label{ex:msr_counting}
@@ -399,178 +396,22 @@ Let $\seto{\setE}$ be the \structe{cardinality} \xref{def:seto} of a set $\setE\
 \end{array}}
 \end{example}
 
-%Suppose a statement involving $\int_\msx \ff() d\msm$ is true for any measure space
-%$\ms$. 
-%If we want the equivalent statement for summation, then we can use the 
-%counting measure such that
-%\begin{align*}
-%  \int_{\Z} \ff()d\msm
-%    &= \sum_{n\in\Z} a_n \msm(\setE_n)
-%  \\&= \sum_{n\in\Z} a_n \left|\set{n\in\Z}{\ff(n)=a_n}\right|
-%  \\&= \sum_{n\in\Z} \ff(n)
-%\end{align*}
-
+Suppose a statement involving $\int_\msx \ff() d\msm$ is true for any measure space
+$\ms$. 
+If we want the equivalent statement for summation, then we can use the 
+counting measure such that
+\begin{align*}
+  \int_{\Z} \ff()d\msm
+    &= \sum_{n\in\Z} a_n \msm(\setE_n)
+  \\&= \sum_{n\in\Z} a_n \seto{\set{n\in\Z}{\ff(n)=a_n}}
+  \\&= \sum_{n\in\Z} \ff(n)
+\end{align*}
 
 %======================================
 %\subsection{Examples on probability spaces}
 %======================================
-Important measure spaces include \structe{probability spaces}.
-The next few examples illustrated measure spaces using 
-coins and dice.
-%---------------------------------------
-\begin{example}[Coin flips]
-\label{ex:msr_coin_flips}
-%---------------------------------------
-Let \coinhead be the ``head" and \cointail be the ``tails" of a ``fair" coin.
-We can construct the following \structe{measure space} (\structe{probability space}) $\ps$:
-\exbox{\begin{array}{ll}
-  \pso &= \left\{ \coinhead, \cointail \right\}
-  \\
-  \pse &= \left\{ \mcom{\left\{\hspace{1ex} \right\}}{$\emptyset$}, 
-                  \mcom{\left\{\text{\coinhead}\right\}}{heads}, 
-                  \mcom{\left\{\text{\cointail}\right\}}{tails}, 
-                  \mcom{\left\{ \text{\coinhead,\cointail} \right\}}{$\pso$}
-          \right\}
-  \\ 
-  \psp(e) &= 
-    \left\{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
-      0           & \{\hspace{1ex}\}  
-                  & ($\emptyset$)
-                  \\
-      1           & \left\{ \text{\coinhead,\cointail}\right\}
-                  & ($\pso$)
-                  \\
-      \frac{1}{2} & \left\{\text{\coinhead}\right\}
-                  & (heads)
-                  \\
-      \frac{1}{2} & \left\{\text{\cointail}\right\}
-                  & (tails)
-    \end{array}\right.
-\end{array}}
-\end{example}
-
-
-%---------------------------------------
-\begin{example}[Even/odd dice measure space]
-\label{ex:msr_even_odd_dice}
-%---------------------------------------
-Suppose we have an ``unfair" dice and we want to know whether
-the result of rolling the dice one time will be ``even" or ``odd".
-We can construct the following \structe{measure space} (\structe{probability space}) $\ps$:
-
-\exbox{\begin{array}{ll}
-  \pso &= \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-  \\
-  \pse &= \left\{ \mcom{\left\{\hspace{1ex} \right\}}{$\emptyset$}, 
-                  \mcom{\left\{\text{\diceA,\diceC,\diceE}\right\}}{odd}, 
-                  \mcom{\left\{\text{\diceB,\diceD,\diceF}\right\}}{even}, 
-                  \mcom{\left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}}{$\pso$}
-          \right\}
-  \\ 
-  \psp(e) &= 
-    \left\{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
-      0           & \{\hspace{1ex}\}  
-                  & ($\emptyset$)
-                  \\
-      1           & \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-                  & ($\pso$)
-                  \\
-      \frac{1}{3} & \left\{\text{\diceA,\diceC,\diceE}\right\}
-                  & (odd)
-                  \\
-      \frac{2}{3} & \left\{\text{\diceB,\diceD,\diceF}\right\}
-                  & (even)
-    \end{array}\right.
-\end{array}}
-\end{example}
-
-The previous example illustrates a 
-measure space in which the events (ignorning $\emptyset$ and $\pso$)
-are \prope{mutually exclusive}. 
-The next example illustrates a measure space where events are {\em not} mutually exclusive.
-
-%---------------------------------------
-\begin{example}
-\label{ex:msr_dice}
-%---------------------------------------
-Suppose we have a ``fair" dice and we are primarily interested in the
-events of the first four 
-$\left(\setn{\text{\diceA,\diceB,\diceC,\diceD}}\right)$
-(that is, whether one roll of the dice will produce 
-a value in the set $\{1,2,3,4\}$)
-and the last three
-$\left(\setn{\text{\diceD,\diceE,\diceF}}\right)$
-However, these events do not by themselves form a \txsigma-algebra.
-Rather under the $\seti$ and $\setu$ operations, these two events generate
-a total of eight possible events that together form a \txsigma-algebra.
-The resulting measure space $\ps$ is
-\exbox{\begin{array}{ll}
-  \pso &= \left\{ \text{\scs\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-  \\
-  \pse &= \left\{ \mcom{\setn{\quad}}{$\emptyset$},\;
-                  \mcom{\setn{\text{\scs\diceA,\diceB,\diceC,\diceD,\diceE,\diceF}}}{$\pso$},\;
-                  \mcom{\setn{\text{\scs\diceA,\diceB,\diceC,\diceD}}}{first four},\;
-                  \mcom{\setn{\text{\scs\diceD,\diceE,\diceF}}}{last three},\; 
-                  \right.
-                  \\&\qquad
-                  \left.
-                  \mcom{\setn{\text{\scs\diceD}}}{$\setn{1234}\seti\setn{456}$},\; 
-                  \mcom{\setn{\text{\scs\diceA,\diceB,\diceC,\diceE,\diceF}}}{$\cmp{\setn{4}}$},\;
-                  \mcom{\setn{\text{\scs\diceE,\diceF}}}{$\cmp{\setn{4}}\seti\setn{456}$},\; 
-                  \mcom{\setn{\text{\scs\diceA,\diceB,\diceC}}}{$\setn{1234}\seti\cmp{\setn{4}}$},\;
-          \right\}
-  \\ 
-  \psp(e) &= 
-    \left\{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
-      0           & \setn{\quad}
-                  & ($\emptyset$)\\
-      1           & \setn{\text{\scs\diceA,\diceB,\diceC,\diceD,\diceE,\diceF}}
-                  & ($\pso$)\\
-      \frac{2}{3} & \setn{\text{\scs\diceA,\diceB,\diceC,\diceD}}
-                  & (first four)\\
-      \frac{1}{2} & \setn{\text{\scs\diceD,\diceE,\diceF}}
-                  & (last three)\\
-      \frac{1}{6} & \setn{\text{\scs\diceD}}
-                  & ($\setn{1234}\seti\setn{456}$) \\
-      \frac{5}{6} & \setn{\text{\scs\diceA,\diceB,\diceC,\diceE,\diceF}}
-                  & ($\cmp{\setn{4}}$) \\
-      \frac{1}{3} & \setn{\text{\scs\diceE,\diceF}}
-                  & ($\cmp{\setn{4}}\seti\setn{456}$) \\ 
-      \frac{1}{2} & \setn{\text{\scs\diceA,\diceB,\diceC}}
-                  & ($\setn{1234}\seti\cmp{\setn{4}}$)
-    \end{array}\right.
-\end{array}}
-\end{example}
-
-%Why go through all the trouble of requiring a \txsigma-algebra?
-%Having a \txsigma-algebra in place ensures that anything we might possibly 
-%want to measure {\em can} be measured.
-%It makes sure all possible combinations are taken into account.
-%And why go through the additional trouble of requiring a measure space?
-%With a measure space available, expressing the measure over a complex
-%set is often greatly simplified because the measure space provides nice 
-%algebraic properties (namely the \txsigma-additive property.
-%\prefp{ex:msr_123456} (next) illustrates how a rather complex 
-%\txsigma-algebra (64 elements) can be compactly represented in a measure space.
-%---------------------------------------
-\begin{example}
-\label{ex:msr_123456}
-%---------------------------------------
-Suppose we have a ``fair" dice and we are interested in measuring over the 
-power set of events (largest possible algebra---$2^6=64$ events).
-This leads to the measure space $\ps$ where
-\exbox{\begin{array}{ll@{\qquad}D}
-  \pso    &= \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-          \\
-  \pse    &= \mathcal{P}(\pso) & (the power-set of $\pso$)
-          \\ 
-  \psp(e) &= \frac{1}{6} |e|
-          & ($\frac{1}{6}$ times the number of possible outcomes in event $e$)
-\end{array}}
-\end{example}
-
-Examples~\ref{ex:msr_even_odd_dice}, \ref{ex:msr_dice}, \ref{ex:msr_123456}
-all involve probability. 
+Important measure spaces include \structb{probability spaces}.
+See \prefpp{sec:probspace_examples} for examples.
 However, measure spaces are useful not just for probability,
 but for anything that needs to be {\em measured}.
 %and many many things need to be measured in mathematics.
@@ -581,18 +422,22 @@ but for anything that needs to be {\em measured}.
 \begin{example}
 \label{ex:msr_jordan}
 \index{measure!Jordan}
-\citep{rao2004}{31}
+\footnote{
+  \citerp{rao2004}{31}
+  }
 %---------------------------------------
-The \hid{Jordan measure space} is $\ms$ where
-\exbox{\begin{array}{ll>{\ds}l}
-  \msx           &=& \R                      \\
-  \mss           &=& \set{(a,b]}{a,b\in\R}   \\
-  \msm((a,b])  &=& \inf\set{\sum_{n=1}^\xN (b_n-a_n)}
-                          {\mcom{\left[\setE\subseteq\setopu_{n=1}^\xN (\setE_n,b_n]\right]}{covers $\setE$}
-                           \;\text{and}\; 
-                           \mcom{\left[\setopi_{n=1}^\xN (\setE_n,b_n]=\emptyset\right]}{disjoint}  
-                          } 
-\end{array}}
+\exboxt{
+  The \structd{Jordan measure space} is $\ms$ where
+  \\\indentx$\begin{array}{>{\ds}ll>{\ds}l}
+    \msx                &=& \R                      \\
+    \mss                &=& \set{(a,b]}{a,b\in\R}   \\
+    \msm(\intoc{a}{b})  &=& \inf\set{\sum_{n=1}^\xN (b_n-a_n)}
+                            {\mcom{\left[\setE\subseteq\setopu_{n=1}^\xN (\setE_n,b_n]\right]}{covers $\setE$}
+                             \;\text{and}\; 
+                             \mcom{\left[\setopi_{n=1}^\xN (\setE_n,b_n]=\emptyset\right]}{disjoint}  
+                            } 
+  \end{array}$
+  }
 \end{example}
 
 %---------------------------------------
@@ -689,7 +534,6 @@ Let $\psetX$ be the \structe{power set} of a set $\setX$ \xref{def:pset}.
 %\end{definition}
 \end{definition}
 
-
 To measure the ``size" of a set $\setE$, we could use another set $\setM$ to ``split" $\setE$ into 
 two parts---the part of $\setE$ inside $\setM$ and the part outside $\setM$.
 If the sum of the outer measures of the two parts separately equals the outer measure of $\setE$
@@ -717,7 +561,6 @@ Let $\mso$ be an \structe{outer measure} in the \structe{measurable space} $\msx
      & (\prope{splitting condition})
 \end{array}}
 \end{definition}
-
 
 %---------------------------------------
 \begin{definition}
