--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -504,40 +504,37 @@ Then
 %---------------------------------------
 \defboxt{
   A random process $\rvx(t)$ is \propd{wide sense stationary} (\propd{WSS}) if
-  \\\indentx$\begin{array}{FllMD}
-   (1).& \pmeanx(t)     & is constant with respect to $t$ & (\prope{stationary in the mean})    & and \\
-   (2).& \Rxx(t+\tau,t) & is constant with respect to $t$ & (\prope{stationary in correlation})
+  \\\indentx$\begin{array}{FlMMD}
+   (1).& \pmeanx(t)     & is \prope{constant} with respect to $t$ & (\prope{stationary in the mean})    & and \\
+   (2).& \Rxx(t+\tau,t) & is \prope{constant} with respect to $t$ & (\prope{stationary in correlation})
   \end{array}$
   }
 \end{definition}
 
-If a process is WSS, mean and correlation are often written
+If a process $\rvx(t)$ is \prope{wide sense stationary}, mean and correlation are often written
 $\pmeanx$ and $\Rxx(\tau)$, respectively.
-If a pair of processes $\rvx$ and $\rvy$ are WSS,
-then their cross-correlation is often written $\Rxy(\tau)$.
+If a pair of processes $\rvx(t)$ and $\rvy(t)$ are \prope{WSS},
+then their cross-correlation is commonly written $\Rxy(\tau)$.
 
 %---------------------------------------
 \begin{definition}
-
-\index{power spectral density}
-\index{PSD}
+\label{def:LSxx}
+\label{def:LSyy}
 \label{def:LSxy}
+\label{def:LSyx}
 %---------------------------------------
 Let $\rvx(t)$ and $\rvy(t)$ be WSS random processes.
 %Then the \textbf{power spectral density} of $\rvx(t)$ and $\rvy(t)$ are defined as
 \defbox{\begin{array}{rclcl}
-   \LSxx(s) &\eqd& \opL{\Rxx(\tau)} &\eqd& \ds \int_{\tau\in\R}\Rxx(\tau) e^{-s\tau} \; d\tau   \\
-   \LSyy(s) &\eqd& \opL{\Ryy(\tau)} &\eqd& \ds \int_{\tau\in\R}\Ryy(\tau) e^{-s\tau} \; d\tau   \\
-   \LSxy(s) &\eqd& \opL{\Rxy(\tau)} &\eqd& \ds \int_{\tau\in\R}\Rxy(\tau) e^{-s\tau} \; d\tau   \\
-   \LSyx(s) &\eqd& \opL{\Ryx(\tau)} &\eqd& \ds \int_{\tau\in\R}\Ryx(\tau) e^{-s\tau} \; d\tau   \\
+     \LSxx(s) &\eqd& \opL{\Rxx(\tau)} &\eqd& \ds \int_{\tau\in\R}\Rxx(\tau) e^{-s\tau} \dtau
+   \\\LSyy(s) &\eqd& \opL{\Ryy(\tau)} &\eqd& \ds \int_{\tau\in\R}\Ryy(\tau) e^{-s\tau} \dtau
+   \\\LSxy(s) &\eqd& \opL{\Rxy(\tau)} &\eqd& \ds \int_{\tau\in\R}\Rxy(\tau) e^{-s\tau} \dtau
+   \\\LSyx(s) &\eqd& \opL{\Ryx(\tau)} &\eqd& \ds \int_{\tau\in\R}\Ryx(\tau) e^{-s\tau} \dtau
 \end{array}}
 \end{definition}
 
 %---------------------------------------
 \begin{definition}
-%\label{def:psd}
-\index{power spectral density}
-\index{PSD}
 \label{def:Swxx}
 \label{def:Swyy}
 \label{def:Swxy}
@@ -546,13 +543,12 @@ Let $\rvx(t)$ and $\rvy(t)$ be WSS random processes.
 Let $\rvx(t)$ and $\rvy(t)$ be WSS random processes.
 %Then the \textbf{power spectral density} of $\rvx(t)$ and $\rvy(t)$ are defined as
 \defbox{\begin{array}{rc>{\ds}lc>{\ds}l}
-   \Swxx(\omega) &\eqd& [\opFT{\Rxx(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Rxx(\tau) e^{-i2\pi\omega\tau} \; d\tau   \\
-   \Swyy(\omega) &\eqd& [\opFT{\Ryy(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Ryy(\tau) e^{-i2\pi\omega\tau} \; d\tau   \\
-   \Swxy(\omega) &\eqd& [\opFT{\Rxy(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Rxy(\tau) e^{-i2\pi\omega\tau} \; d\tau   \\
-   \Swyx(\omega) &\eqd& [\opFT{\Ryx(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Ryx(\tau) e^{-i2\pi\omega\tau} \; d\tau
+     \Swxx(\omega) &\eqd& [\opFT{\Rxx(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Rxx(\tau) e^{-i\omega\tau} \dtau
+   \\\Swyy(\omega) &\eqd& [\opFT{\Ryy(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Ryy(\tau) e^{-i\omega\tau} \dtau
+   \\\Swxy(\omega) &\eqd& [\opFT{\Rxy(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Rxy(\tau) e^{-i\omega\tau} \dtau
+   \\\Swyx(\omega) &\eqd& [\opFT{\Ryx(\tau)}](\omega) &\eqd& \ds \int_{\tau\in\R} \Ryx(\tau) e^{-i\omega\tau} \dtau
 \end{array}}
 \end{definition}
-
 
 %---------------------------------------
 \begin{definition}
@@ -571,7 +567,18 @@ Let $\rvx(t)$ be a random variable that is \prope{stationary in the mean} such t
 \\\indentx$\ds\pE\brs{\rvx(t)}$ is constant with respect to $t$.
 \defboxt{
   $\rvx(t)$ is \propd{ergodic in the mean} if
-  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{T\to\infty}\frac{1}{2T}\int_{-T}^{+T}\rvx(t)\dt$
+  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$
+  }
+\end{definition}
+
+%---------------------------------------
+\begin{definition}
+\label{def:energy}
+%---------------------------------------
+Let $\rvx(t)$ be a random variable.
+\defboxt{
+  The \fnctd{energy} of $\rvx(t)$ is
+  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$
   }
 \end{definition}
 
@@ -604,19 +611,19 @@ Let $\rvx(t)$ be a \fncte{random process}.
      &&    \text{by definition of $\Rxx(t)$}
      &&    \text{\xref{def:Rxx}}
    \\&=    \pE\brs{\rvx^\ast(t) \int_{\tau\in\R}\rvx(t+\tau) e^{-i\omega\tau} \dtau }
-   \\&=    \pE\brs{\rvx^\ast(t) \int_{u\in\R}\rvx(u) e^{-i2\pi\ff(u-t)} \du }
+   \\&=    \pE\brs{\rvx^\ast(t) \int_{u\in\R}\rvx(u) e^{-i\omega(u-t)} \du }
      &&    \text{where $u\eqd t+\tau$ $\implies$ $\tau=u-t$}
    \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t} \int_{u\in\R}\rvx(u) e^{-i\omega u} \du }
    \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t} \ft{x}(\omega) }
      &&    \text{by definition of \ope{Fourier Transform}}
      &&    \text{\xref{def:opFT}}
    \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t}} \ft{x}(\omega)
-   \\&=    \brs{\lim_{T\to\infty}\frac{1}{2T}\int_{-T}^{+T} \rvx^\ast(t)e^{i\omega t} \dt} \ft{x}(\omega)
+   \\&=    \brs{\lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau} \rvx^\ast(t)e^{i\omega t} \dt} \ft{x}(\omega)
      &&    \text{by \prope{ergodic in the mean} hypothesis}
      &&    \text{\xref{def:ergomean}}
-   \\&=    \lim_{T\to\infty}\frac{1}{2T}\brs{\int_{t\in\R}\rvx(t)e^{-i\omega t} \dt}^\ast \ft{x}(\omega)
-   \\&=    \lim_{T\to\infty}\frac{1}{2T} \ft{x}^\ast(\omega) \ft{x}(\omega)
-   \\&=    \lim_{T\to\infty}\frac{1}{2T} \left|\ft{x}(\omega)\right|^2
+   \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau}\brs{\int_{t\in\R}\rvx(t)e^{-i\omega t} \dt}^\ast \ft{x}(\omega)
+   \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau} \ft{x}^\ast(\omega) \ft{x}(\omega)
+   \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau} \abs{\ft{x}(\omega)}^2
 \end{align*}
 
 Thus, $\Swxx(\omega)$ is the power density of $\rvx(t)$ in the frequency domain.
