--- a/common/probspace.tex
+++ b/common/probspace.tex
@@ -206,9 +206,9 @@ but also its complement $\cmpA$.
 A topology is not closed under the complement operation.
 So instead of a topology only, we equip the space with a more powerful (and thus less general) structure
 called a \structe{\txsigma-algebra} (\structe{sigma-algebra}) \xref{def:sigalg}.
-A \txsigma-algebra is a subset structure that is closed under set complement.
-A set together with a \txsigma-algebra is called a \structe{measurable space}.
-And a set together with a \txsigma-algebra and a \ope{measure} on that \txsigma-algebra
+A \structe{\txsigma-algebra} is a subset structure that is closed under set complement.
+A set together with a \structe{\txsigma-algebra} is called a \structe{measurable space}.
+And a set together with a \structe{\txsigma-algebra} and a \ope{measure} on that \structe{\txsigma-algebra}
 is called a \structe{measure space} \xref{def:mspace}.
 
 The next definition presents a very important measure space---the \structe{probability space}.
@@ -519,14 +519,15 @@ with \fncte{probability density function} $\ppx(x)$ and
 
 %=======================================
 \section{Examples}
+\label{sec:probspace_examples}
 %=======================================
 %---------------------------------------
-\begin{example}[Single coin flip]
+\begin{example}[\exmd{single coin toss}]
 \label{ex:ps_coin}
 %---------------------------------------
 Let $\coinhead$ represent ``heads" and $\cointail$ represent ``tails" in a coin toss.
 Let $0<p<1$ be the probability of a head.
-A \structe{probability space} $\ps$ for this single coin toss is as follows:
+A \structe{probability space} $\ps$ for a single coin toss is as follows:
 \exbox{
   \begin{array}{rcl}
     \psO &=&   \setn{\coinhead,\, \cointail}
@@ -537,12 +538,12 @@ A \structe{probability space} $\ps$ for this single coin toss is as follows:
                      \mcom{\setn{\coinhead,\,\cointail}}{heads or tails}
                     }
       \\
-    \psP x &=& 
-      \brlr{\begin{array}{l>{\text{for }}l@{\qquad}D}
-        0   & x=\emptyset                  & (neither heads nor tails) \\
-        p   & x=\setn{\coinhead}           & (heads)                   \\
-        1-p & x=\setn{\text{\cointail}}    & (tails)                   \\
-        1   & x=\setn{\coinhead,\cointail} & (either heads or tails)
+    \psP(\setX) &=& 
+      \brb{\begin{array}{lMc>{\ds}lD}
+        0   & for $\setX$ &=& \emptyset                  & (neither heads nor tails) \\
+        p   & for $\setX$ &=& \setn{\coinhead}           & (heads)                   \\
+        1-p & for $\setX$ &=& \setn{\text{\cointail}}    & (tails)                   \\
+        1   & for $\setX$ &=& \setn{\coinhead,\cointail} & (either heads or tails)
       \end{array}}
   \end{array}
   \tbox{\includegraphics{graphics/lat4_m2_psE_coin.pdf}}
@@ -584,7 +585,7 @@ A \structe{probability space} $\ps$ for this single coin toss is as follows:
 %
 %Note however that
 %\[   \pse = \left\{ \emptyset, \mbox{0 heads}, \mbox{1 head}, \mbox{2 heads}, \pso \right\} \]
-%is {\bf not} a valid event set because it is {\bf not} a \txsigma-algebra.
+%is {\bf not} a valid event set because it is {\bf not} a \structe{\txsigma-algebra}.
 %For example, $\mbox{1 head}\cup\mbox{2 heads}$ is not in $\pse$.
 %\end{example}
 
@@ -661,61 +662,45 @@ A \structe{probability space} $\ps$ for this single coin toss is as follows:
 \end{align*}
 \end{proof}
 
-%%---------------------------------------
-%\begin{example}[Even/odd dice measure space]
-%\label{ex:prob_even_odd_dice}
-%%---------------------------------------
-%Suppose we have an ``unfair" dice and we want to know whether
-%the result of rolling the dice one time will be ``even" or ``odd".
-%We can construct the following measure space (probability space) $\ps$:
-%
-%\exbox{\begin{array}{ll}
-%  \pso &= \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-%  \\
-%  \pse &= \left\{ \mcom{\left\{\hspace{1ex} \right\}}{$\emptyset$},
-%                  \mcom{\left\{\text{\diceA,\diceC,\diceE}\right\}}{odd},
-%                  \mcom{\left\{\text{\diceB,\diceD,\diceF}\right\}}{even},
-%                  \mcom{\left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}}{$\pso$}
-%          \right\}
-%  \\
-%  \psp(e) &=
-%    \left\{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
-%      0           & \{\hspace{1ex}\}
-%                  & ($\emptyset$)
-%                  \\
-%      1           & \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-%                  & ($\pso$)
-%                  \\
-%      \frac{1}{3} & \left\{\text{\diceA,\diceC,\diceE}\right\}
-%                  & (odd)
-%                  \\
-%      \frac{2}{3} & \left\{\text{\diceB,\diceD,\diceF}\right\}
-%                  & (even)
-%    \end{array}\right.
-%\end{array}}
-%\end{example}
-%
-%Example~\ref{ex:prob_even_odd_dice} (previous) illustrated a
-%measure space in which the events (ignorning $\emptyset$ and $\pso$)
-%are {\em mutually exclusive}.
-%Example~\ref{ex:prob_dice} (next) illustrates a measure space
-%where events are {\em not} mutually exclusive.
-
-%---------------------------------------
-\exboxt{
-\parbox{\tw-72.7mm}{
-\begin{example}[even/odd die]
-\label{ex:prob_dice}
-%---------------------------------------
-Let $0<p<1$ be the probability of a die toss being odd.
-Then 
-\\\indentx$\psp(\emptyset)\!=\!0$, $\psp(\setA)\!=\!p$, $\psp(\setB)\!=\!1-p$, and $\psp(\setO)\!=\!1$ .\\
-The order structure of this \structe{probability space} is illustrated to the right.
-\end{example}
-}%
-\tbox{\includegraphics{graphics/lat4_m2_prob_die.pdf}}
+\begin{figure}[h]
+  \exbox{
+    \begin{array}{rc>{\ds}l}
+      \pso &=&\left\{ \text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF} \right\}
+      \\
+      \pse &=&\brb{\mcom{\left\{\hspace{1ex} \right\}}{$\emptyset$}, 
+                   \mcom{\left\{\text{\dieA,\dieC,\dieE}\right\}}{odd}, 
+                   \mcom{\left\{\text{\dieB,\dieD,\dieF}\right\}}{even}, 
+                   \mcom{\left\{ \text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF} \right\}}{$\pso$}
+                  }
+      \\ 
+      \psp(\setX) &=&
+        \brb{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
+          0   & \{\hspace{1ex}\}  
+              & ($\emptyset$)
+              \\
+          1   & \left\{ \text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF} \right\}
+              & ($\pso$)
+              \\
+          p   & \left\{\text{\dieA,\dieC,\dieE}\right\}
+              & (odd)
+              \\
+          1-p & \left\{\text{\dieB,\dieD,\dieF}\right\}
+              & (even)
+      \end{array}}
+  \end{array}
+  \qquad
+  \tbox{\includegraphics{graphics/lat4_m2_prob_die.pdf}}
 }
-\mbox{}\\
+\caption{\structe{even/odd die probability space} \xref{ex:die_evenodd} \label{fig:die_evenodd}}
+\end{figure}
+%---------------------------------------
+\begin{example}[\exmd{even/odd die toss}]
+\label{ex:die_evenodd}
+%---------------------------------------
+The \structe{probability space} for an \structd{even/odd die toss},
+with $0<p<1$ being the probability of the die toss being odd, 
+is illustrated in \prefpp{fig:die_evenodd}.
+\end{example}
 \begin{proof}
 \begin{align*}
   \psp(\setO)
@@ -756,8 +741,12 @@ The order structure of this \structe{probability space} is illustrated to the ri
 \end{align*}
 \end{proof}
 
+
+The two previous \exme{even/odd die} example \xref{ex:die_first4} is in essence the same as the 
+\exme{single coin toss} \xref{ex:ps_coin}.
+The next offers a little more complexity.
 %---------------------------------------
-\begin{figure}% Single die
+\begin{figure}[h]%
 %---------------------------------------
   \centering
   \exbox{
@@ -769,99 +758,104 @@ The order structure of this \structe{probability space} is illustrated to the ri
       \psp(\setC)     &=&p^2      & \psp(\setB\setu\setC)&=&-p^2+2p 
     \end{array}
     }
-  \caption{\structe{Die toss} \xref{ex:prob_dice} \label{fig:prob_dice}}
+  \caption{3-4-2 die example \xref{ex:die_342} \label{fig:die_342}}
 \end{figure}
 %---------------------------------------
 \begin{example}
-\label{ex:prob_dice}
+\label{ex:die_342}
 %---------------------------------------
-Let $p\eqd\frac{1}{6}$ be the probability of any face of a fair die.
-The \structe{probability space} $\ps$ is illustrated in \prefpp{fig:prob_dice}.
+Suppose we have a ``fair" die and we are primarily interested in the
+events of the first three $\setn{\dieA,\dieB,\dieC}$, the next two, $\setn{\dieD,\dieE}$ and the final one $\setn{\dieF}$.
+The resulting \structe{probability space} is illustrated in \prefpp{fig:die_342}.
 \end{example}
-\begin{proof}
-The proof is in essence the same as for \prefpp{ex:ps_doublecoin}.
-\end{proof}
 
-%%---------------------------------------
-%\begin{example}
-%\label{ex:prob_dice}
-%%---------------------------------------
-%Suppose we have a ``fair" dice and we are primarily interested in the
-%events of the first four
-%$\left(\setn{\text{\diceA,\diceB,\diceC,\diceD}}\right)$
-%(that is, whether one roll of the dice will produce
-%a value in the set $\{1,2,3,4\}$)
-%and the last three
-%$\left(\setn{\text{\diceD,\diceE,\diceF}}\right)$
-%However, these events do not by themselves form a $\sigma$-algebra.
-%Rather under the $\cap$ and $\cup$ operations, these two events generate
-%a total of eight possible events that together form a $\sigma$-algebra.
-%The resulting measure space $\ps$ is
-%\exbox{\begin{array}{ll}
-%  \pso &= \left\{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} \right\}
-%  \\
-%  \pse &= \left\{ \mcom{\setn{\quad}}{$\emptyset$},\;
-%                  \mcom{\setn{\text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF}}}{$\pso$},\;
-%                  \mcom{\setn{\text{\diceA,\diceB,\diceC,\diceD}}}{first four},\;
-%                  \mcom{\setn{\text{\diceD,\diceE,\diceF}}}{last three},\;
-%                  \right.
-%                  \\&\qquad
-%                  \left.
-%                  \mcom{\setn{\text{\diceD}}}{$\setn{1234}\cap\setn{456}$},\;
-%                  \mcom{\setn{\text{\diceA,\diceB,\diceC,\diceE,\diceF}}}{$\setn{4}^c$},\;
-%                  \mcom{\setn{\text{\diceE,\diceF}}}{$\setn{4}^c\cap\setn{456}$},\;
-%                  \mcom{\setn{\text{\diceA,\diceB,\diceC}}}{$\setn{1234}\cap\setn{4}^c$},\;
-%          \right\}
-%  \\
-%  \psp(e) &=
-%    \left\{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
-%      0           & \setn{\quad}
-%                  & ($\emptyset$)\\
-%      1           & \setn{\text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF}}
-%                  & ($\pso$)\\
-%      \frac{2}{3} & \setn{\text{\diceA,\diceB,\diceC,\diceD}}
-%                  & (first four)\\
-%      \frac{1}{2} & \setn{\text{\diceD,\diceE,\diceF}}
-%                  & (last three)\\
-%      \frac{1}{6} & \setn{\text{\diceD}}
-%                  & ($\setn{1234}\cap\setn{456}$) \\
-%      \frac{5}{6} & \setn{\text{\diceA,\diceB,\diceC,\diceE,\diceF}}
-%                  & ($\setn{4}^c$) \\
-%      \frac{1}{3} & \setn{\text{\diceE,\diceF}}
-%                  & ($\setn{4}^c\cap\setn{456}$) \\
-%      \frac{1}{2} & \setn{\text{\diceA,\diceB,\diceC}}
-%                  & ($\setn{1234}\cap\setn{4}^c$)
-%    \end{array}\right.
-%\end{array}
-%\tbox{\includegraphics{graphics/lat8_l2e3_prob_die.pdf}}}
-%\end{example}
+The two previous examples \xxref{ex:die_first4}{ex:die_342} illustrate a
+\structe{probabilty space}s in which the events %(ignorning $\emptyset$ and $\pso$)
+are \prope{mutually exclusive}. The (next) illustrates one where events are {\em not}.
 
-%Why go through all the trouble of requiring a $\sigma$-algebra?
-%Having a $\sigma$-algebra in place ensures that anything we might possibly
-%want to measure {\em can} be measured.
-%It makes sure all possible combinations are taken into account.
-%And why go through the additional trouble of requiring a measure space?
-%With a measure space available, expressing the measure over a complex
-%set is often greatly simplified because the measure space provides nice
-%algebraic properties (namely the $\sigma$-additive property.
-%\pref{ex:prob_123456} (next) illustrates how a rather complex
-%$\sigma$-algebra (64 elements) can be compactly represented in a measure space.
-%%---------------------------------------
-%\begin{example}
-%\label{ex:prob_123456}
-%%---------------------------------------
-%Suppose we have a ``fair" dice and we are interested in measuring over the
-%power set of events (largest possible algebra---$2^6=64$ events).
-%This leads to the measure space $\ps$ where
-%\exbox{\begin{array}{ll@{\qquad}D}
-%  \pso    &= \setn{ \text{\diceA,\diceB,\diceC,\diceD,\diceE,\diceF} }
-%          \\
-%  \pse    &= \mathcal{P}(\pso) & (the power-set of $\pso$)
-%          \\
-%  \psp(e) &= \frac{1}{6} |e|
-%          & ($\frac{1}{6}$ times the number of possible outcomes in event $e$)
-%\end{array}}
-%\end{example}
+\begin{figure}
+  \centering
+  \exbox{\begin{array}{ll}
+    \pso &= \left\{ \text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF} \right\}
+    \\
+    \pse &= \left\{ \mcom{\setn{\quad}}{$\emptyset$},\;
+                    \mcom{\setn{\text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF}}}{$\pso$},\;
+                    \mcom{\setn{\text{\dieA,\dieB,\dieC,\dieD}}}{first four},\;
+                    \mcom{\setn{\text{\dieD,\dieE,\dieF}}}{last three},\;
+                    \right.
+                    \\&\qquad
+                    \left.
+                    \mcom{\setn{\text{\dieD}}}{$\setn{1234}\cap\setn{456}$},\;
+                    \mcom{\setn{\text{\dieA,\dieB,\dieC,\dieE,\dieF}}}{$\setn{4}^c$},\;
+                    \mcom{\setn{\text{\dieE,\dieF}}}{$\setn{4}^c\cap\setn{456}$},\;
+                    \mcom{\setn{\text{\dieA,\dieB,\dieC}}}{$\setn{1234}\cap\setn{4}^c$},\;
+            \right\}
+    \\
+    \psp(e) &=
+      \left\{\begin{array}{l@{\qquad} >{\text{for }e=}l @{\qquad}D}
+        0           & \setn{\quad}
+                    & ($\emptyset$)\\
+        1           & \setn{\text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF}}
+                    & ($\pso$)\\
+        \frac{2}{3} & \setn{\text{\dieA,\dieB,\dieC,\dieD}}
+                    & (first four)\\
+        \frac{1}{2} & \setn{\text{\dieD,\dieE,\dieF}}
+                    & (last three)\\
+        \frac{1}{6} & \setn{\text{\dieD}}
+                    & ($\setn{1234}\cap\setn{456}$) \\
+        \frac{5}{6} & \setn{\text{\dieA,\dieB,\dieC,\dieE,\dieF}}
+                    & ($\setn{4}^c$) \\
+        \frac{1}{3} & \setn{\text{\dieE,\dieF}}
+                    & ($\setn{4}^c\cap\setn{456}$) \\
+        \frac{1}{2} & \setn{\text{\dieA,\dieB,\dieC}}
+                    & ($\setn{1234}\cap\setn{4}^c$)
+      \end{array}\right.
+  \end{array}}
+  \caption{First 4 / last 3 die example \xref{ex:die_first4} \label{fig:die_first4}}
+\end{figure}
+%---------------------------------------
+\begin{example}
+\label{ex:die_first4}
+%---------------------------------------
+Suppose we have a ``fair" die and we are primarily interested in the
+events of the first four
+$\left(\setn{\text{\dieA,\dieB,\dieC,\dieD}}\right)$
+(that is, whether one roll of the die will produce
+a value in the set $\setn{\dieA,\dieB,\dieC,\dieD}$)
+and the last three
+$\left(\setn{\text{\dieD,\dieE,\dieF}}\right)$
+However, these events do not by themselves form a \structe{\txsigma-algebra}.
+Rather under the $\seti$ and $\setu$ operations, these two events generate
+a total of eight possible events that together form a \structe{\txsigma-algebra}.
+The resulting \structe{probability space} is illustrated in \prefpp{fig:die_first4}.
+\end{example}
+
+But why go through all the trouble of requiring a \txsigma-algebra?
+Having a \txsigma-algebra in place ensures that anything we might possibly 
+want to measure {\em can} be measured.
+It makes sure all possible combinations are taken into account.
+And why go through the additional trouble of requiring a measure space?
+With a measure space available, expressing the measure over a complex
+set is often greatly simplified because the measure space provides nice 
+algebraic properties (namely the \prope{\txsigma-additive} property).
+\pref{ex:prob_123456} (next) illustrates how a rather complex
+\txsigma-algebra (64 elements) can be compactly represented in a measure space.
+%---------------------------------------
+\begin{example}
+\label{ex:prob_123456}
+%---------------------------------------
+Suppose we have a ``fair" dice and we are interested in measuring over the
+power set of events (largest possible algebra---$2^6=64$ events).
+This leads to the probability space $\ps$ where
+\exbox{\begin{array}{ll@{\qquad}D}
+  \psO    &= \setn{ \text{\dieA,\dieB,\dieC,\dieD,\dieE,\dieF} }
+          \\
+  \psE    &= \mathcal{P}(\pso) & (the power-set of $\pso$)
+          \\
+  \psP(e) &= \frac{1}{6} |e|
+          & ($\frac{1}{6}$ times the number of possible outcomes in event $e$)
+\end{array}}
+\end{example}
 
 %---------------------------------------
 \begin{example}[Gaussian distribution on $\R$]
@@ -875,22 +869,22 @@ and where $\int$ is the \ope{Lebesgue integral} \xref{def:intL}.
 Then $\opair{\psL}{\psp}$ is a \structd{probability space}. 
 \end{example}
 
-%%---------------------------------------
-%\begin{example}[Gaussian noise]
-%%---------------------------------------
-%Let $X\sim\pN{0}{\sigma^2}$ be a random variable with Gaussian distribution.
-%We can construct the following probability space $\ps$:
-%
-%\exbox{\begin{array}{rcl}
-%  \pso &=& \R \\
-%  \pse &=& \setn{ \emptyset, \pso } \setu \set{(a,b)}{a,b\in\R,a<b} \\
-%  \psp x &=& \left\{\begin{array}{ll}
-%    0      & \mbox{ for } x=\emptyset \\
-%    1      & \mbox{ for } x=\pso      \\
-%    \frac{1}{\sqrt{2\pi\sigma^2}}\int_a^b e^{\frac{x^2}{2\sigma^2}}\dx & \mbox{ otherwise}
-%    \end{array}\right.
-%\end{array}}
-%\end{example}
+%---------------------------------------
+\begin{example}[Gaussian noise]
+%---------------------------------------
+Let $X\sim\pN{0}{\sigma^2}$ be a random variable with Gaussian distribution.
+We can construct the following probability space $\ps$:
+
+\exbox{\begin{array}{rcl}
+  \pso &=& \R \\
+  \pse &=& \setn{ \emptyset, \pso } \setu \set{(a,b)}{a,b\in\R,a<b} \\
+  \psp x &=& \left\{\begin{array}{ll}
+    0      & \mbox{ for } x=\emptyset \\
+    1      & \mbox{ for } x=\pso      \\
+    \frac{1}{\sqrt{2\pi\sigma^2}}\int_a^b e^{\frac{x^2}{2\sigma^2}}\dx & \mbox{ otherwise}
+    \end{array}\right.
+\end{array}}
+\end{example}
 
 %---------------------------------------
 \begin{example}
@@ -1326,7 +1320,7 @@ with the five values of $\pse_n$ listed below:
   \end{align*}
 Suppose the samples of $\pso$ are generated by a physical process such that they are all
 equally likely to occur.
-Then by varying the \txsigma-algebra $\pse_n$ effectively varies the probability
+Then by varying the \structe{\txsigma-algebra} $\pse_n$ effectively varies the probability
 distribution of the probability space $(\pso,\, \pse_n,\, \psp)$.
 This is illustrated by the figure to the left.
 \end{minipage}
