Completed proofs for all 8 forms of Rxy(m)

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -4,6 +4,20 @@
 % BibTeX input file
 %============================================================================
 
+@article{allemang1987,
+  number       = {AFWAL-TR-87-3069},
+  volume       = {2},
+  journal      = {Experimental Modal Analysis And Dynamic Component Synthesis},
+  volume       = {11},
+  journal      = {Measurement Techniques for Experimental Modal Analysis},
+  author       = {Randall J. Allemang and David L. Brown and Robert W. Rost},
+  institution  = {Structural Dynamics Research Laboratory Department of Mechanical and Industrial Engineering University of Cincinnati},
+  address      = {Cincinnati, Ohio 45221-0072},
+  month        = {December},
+  year         = {1987},
+  url          = {https://apps.dtic.mil/dtic/tr/fulltext/u2/a195145.pdf},
+  }
+
 @book{billingsley1995,
   author       = {Patrick Billingsley},
   title        = {Probability And Measure},
@@ -122,6 +136,16 @@
   asin         = {B0006AUOGO},
   isbn         = {B0006AUOGO},
   url          = {http://statweb.stanford.edu/~cgates/PERSI/Courses/Phil166-266/Kolmogorov-Foundations.pdf},
+  }
+
+@article{leuridan1986,
+  author       = {J. Leuridan and J. De Vis and D., Van der Auweraer H. F. Lembregts},
+  title        = {"A comparison of some frequency response function measurement techniques},
+  booktitle    = {Proceedings of the 4th International Modal Analysis Conference IMAC},
+  address      = {Los Angeles, CA},
+  pages        = {908--918},
+  year         = {1986},
+  url          = {https://www.researchgate.net/publication/283994172},
   }
 
 @book{manolakis2005,
@@ -272,6 +296,18 @@
   url          = {http://www.amazon.com/dp/0137463146},
   urlw         = {http://www.worldcat.org/isbn/0137463146},
   }
+
+@book{shin2008,
+  isbn10       = {0470725648},
+  isbn         = {9780470725641},
+  title        = {Fundamentals of Signal Processing for Sound and Vibration Engineers},
+  author       = {Kihong Shin and Joseph Hammond},
+  publisher    = {John Wiley \& Sons},
+  year         = {2008},
+  pages        = {416},
+  isbn         = {https://archive.org/details/FubdamentalsOfSignalShinHammond/},
+  }
+
 
 @book{szekely1986,
   author       = {G/'abor J. Sz/'ekely},
