--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -626,21 +626,23 @@ Here is a very limited overview:
   \\&\imark&\citerpg{bendat2011}{111}{1118210824}   & R_{xy}(m)            &=& E\brs{\rvx(0)\rvy(m)}
   \\&\imark&\citerpg{helstrom1991}{369}{0023535717} & \Rxy(t_1,t_2)        &=& E[\rvx(t_1)\rvy(t_2)]
   \\&\imark&\citerpg{proakis1996}{A4}{0133737624}   & \gamma_{xy}(t_1,t_2) &=& E(X_{t_1}Y_{t_2})
+  \\&\imark&\citerpg{shin2008}{280}{0470725648}     & R_{xy}(\tau)         &=& E[x(t)y(t+\tau)]
+
 \end{array}$
 
 Note the following:
 \begin{enumerate}
 \item Depending on how we define $\Rxy(m)$ we can get several different results for $\Swxy(\omega)$:\label{item:RxySwxy}
-\\\rembox{\begin{array}{M >{\ds}rc>{\ds}l c >{\ds}rc>{\ds}l }
-    Papoulis:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
-  \\Kay:             & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
-  \\y-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh^\ast(-\omega)\Swxx(\omega)
-  \\x-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh     (-\omega)\Swxx(\omega)
-  \\Bendat:          & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
-  \\alt-Bendat:      & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh     (-\omega)\Swxx(\omega)
-  \\Bendat-star      & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh^\ast(-\omega)\Swxx(\omega)
-  \\alt-Bendat-star: & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh     (-\omega)\Swxx(\omega)
-\end{array}}.
+\\\rembox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l*{2}{@{\hspace{0pt}}l}}
+    (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&( &\omega)\Swxx(\omega)
+  \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &( &\omega)\Swxx(\omega)
+  \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(-&\omega)\Swxx(\omega)
+  \\(4).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh     &(-&\omega)\Swxx(\omega)
+  \\(5).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &( &\omega)\Swxx(\omega)
+  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh     &(-&\omega)\Swxx(\omega)
+  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(-&\omega)\Swxx(\omega)
+  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh     &(-&\omega)\Swxx(\omega)
+\end{array}}
 
 
 \item The \ope{expectation} operator $\pE\brp{\rvX\rvY^\ast}$ is an \fncte{inner product}.
@@ -656,15 +658,15 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 
 \item In the special case where $\rvx[n]$ and $\rvy[n]$ are \propb{real-valued} and by 
       \prefpp{thm:dtft_conjneg_real}, \pref{item:RxySwxy} becomes
-\\\rembox{\begin{array}{M >{\ds}rc>{\ds}l c >{\ds}rc>{\ds}l }
-    Papoulis:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
-  \\Kay:             & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
-  \\y-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
-  \\x-star-m:        & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
-  \\Bendat:          & \Rxy(m) &\eqd& \pE\brs{\rvx     (0)\rvy     (m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega)\Swxx(\omega)
-  \\alt-Bendat:      & \Rxy(m) &\eqd& \pE\brs{\rvx     (m)\rvy     (0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega)\Swxx(\omega)
-  \\Bendat-star      & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(0)\rvy^\ast(m)} &\implies& \Swxy(\omega) &=& \Fh     ( \omega) \Swxx(\omega)
-  \\alt-Bendat-star: & \Rxy(m) &\eqd& \pE\brs{\rvx^\ast(m)\rvy^\ast(0)} &\implies& \Swxy(\omega) &=& \Fh^\ast( \omega) \Swxx(\omega)
+\\\rembox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l@{\hspace{0pt}}l}
+    (1s).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
+  \\(2s).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
+  \\(3s).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
+  \\(4s).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
+  \\(5s).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
+  \\(6s).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
+  \\(7s).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
+  \\(8s).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
 \end{array}}
 \end{enumerate}
 \end{remark}
@@ -709,7 +711,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{\xref{def:Swxy}}
     \\&\eqd \opDTFT\pE\brs{\rvy(m)\rvx^\ast(0)}
       && \text{by Kay's definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\brp{\fh(m)\conv\rvx(m)}                \rvx^\ast(0)}
+    \\&=    \opDTFT\pE\brs{\brp{\fh(m)\conv\rvx(m)}\rvx^\ast(0)}
       && \text{by \prope{LTI} property}
       && \text{\xref{thm:conv}}
     \\&=    \opDTFT\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvx^\ast(0)}
@@ -875,12 +877,63 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 \end{enumerate}
 \end{proof}
 
+%---------------------------------------
+\begin{definition}
+\footnote{
+  \citerpgc{shin2008}{293}{0470725648}{
+    $H_1(f)=\frac{\Swxy(f)}{\Swxx(f)}$ (9.63)
+    $H_2(f)=\frac{\Swyy(f)}{\Swyx(f)}$ (9.65)
+    },
+  \citePppc{allemang1987}{54}{55}{5.3.1 $H_1$ Technique; $[H]=[G_{XF}][G_{FF}]^{-1}$ (11)},
+  }
+\label{def:H1}
+\label{def:H2}
+%---------------------------------------
+\defbox{\begin{array}{Mrc>{\ds}l}
+    The transfer function $\fH_1(\omega)$ is defined as & \fH_1(\omega) &\eqd& \frac{\Swyx(\omega)}{\Swxx(\omega)}
+  \\The transfer function $\fH_2(\omega)$ is defined as & \fH_2(\omega) &\eqd& \frac{\Swyy(\omega)}{\Swxy(\omega)}
+\end{array}}
+\end{definition}
 
 %---------------------------------------
+\begin{proposition}
+\footnote{
+  \citerpg{shin2008}{293}{0470725648}
+  }
+%---------------------------------------
+\propbox{
+  \brb{\begin{array}{rc>{\ds}l}
+    \fy'[m] &=& \fy[m] + \fv[m]
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FrclD}
+          &\fH_1(\omega) = \fH(\omega)
+%    \\(2).&\fH_2(\omega) &=& 
+  \end{array}}
+  }
+\end{proposition}
+\begin{proof}
+\begin{align*}
+  \fH_1(\omega)
+    &\eqd \frac{\Swxx[y'x](\omega)}{\Swxx(\omega)}
+    && \text{by definition of $\fH_1$}
+    && \text{\xref{def:H1}}
+  \\&\eqd \frac{\opDTFT\Rxx[y'x][m]}{\Swxx(\omega)}
+  \\&\eqd \frac{\opDTFT\pE\brs{\rvy'[m]\rvx^\ast[0]}}{\Swxx(\omega)}
+  \\&\eqd \frac{\opDTFT\pE\brs{(\rvy[m]+\fv[m])\rvx^\ast[0]}}{\Swxx(\omega)}
+  \\&=    \frac{\opDTFT\pE\brs{\rvy[m]\rvx^\ast[0]}}{\Swxx(\omega)}
+     +    \frac{\opDTFT\pE\brs{\fv[m]\rvx^\ast[0]}}{\Swxx(\omega)}
+  \\&=    \frac{\opDTFT\pE\brs{\rvy[m]\rvx^\ast[0]}}{\Swxx(\omega)}
+     +    0
+  \\&=    \frac{\Swyx(\omega)}{\Swxx(\omega)}
+  \\&\eqd \fH(\omega)
+\end{align*}
+\end{proof}
+%=======================================
 \section{Whitening}
 \index{whitening filter}
 \label{sec:d-whiten}
-%---------------------------------------
+%=======================================
 \begin{figure}[h]
   \centering
   \includegraphics{graphics/pz_minphase.pdf}
